# rs-ngybigass

./: Cargo.toml
.cargo/: config.toml
crates/bevy_asset_aseprite/: Cargo.toml
crates/bevy_asset_aseprite/src/: lib.rs  loader.rs
crates/bevy_asset_ldtk/: Cargo.toml
crates/bevy_asset_ldtk/src/: lib.rs  loader.rs  schema.rs  util.rs
crates/bevy_asset_ldtk/src/accessors/: entity.rs  layer.rs  level.rs  mod.rs  root.rs  tiles.rs  tileset.rs  world.rs
crates/bevy_asset_ldtk/src/schemas/: mod.rs  v1_5_3.rs
crates/game/: Cargo.toml
crates/game/assets/level/: game.ldtk  game2.ldtk  mushroom.aseprite  test.aseprite  test.ldtk
crates/game/src/: lib.rs  main.rs  player.rs
crates/game/src/collision/: identifiers.rs  layer.rs
crates/game/src/environment/: mod.rs
crates/game/src/environment/collision/: mod.rs
crates/game/src/environment/pawn/: movement.rs
crates/game/src/level/: mod.rs  player.rs  sprite.rs  tileset.rs
crates/game/src/pawn/: mod.rs  movement.rs
crates/game/src/render/: mod.rs
crates/game/src/render/multi_texture_atlas/: allocator.rs  atlas.rs  builder.rs  identifier.rs  loader.rs  mod.rs  plugin.rs
crates/game/src/render/tilemap/: material.rs  mod.rs
crates/game/src/scale/: camera.rs  mod.rs
crates/game/src/tilemap/: material.rs  material.wgsl  mod.rs  texture_bank.rs  texture_bank_entry.rs  texture_bank_identifier.rs  texture_bank_import.rs  tilemap_entry.rs
crates/raydee/: Cargo.toml
crates/raydee/examples/: ray_tests.rs  shape_tests.rs
crates/raydee/src/: gizmos.rs  lib.rs
crates/raydee/src/motion/: frame.rs  mod.rs  query.rs
crates/raydee/src/ray/: mod.rs  ray_caster.rs  ray_intersection.rs  ray_target.rs
crates/raydee/src/shape/: bevy_circle.rs  bevy_rectangle.rs  bevy_rectangle_rounded.rs  box_oriented.rs  box_oriented_boxy.rs  box_oriented_boxy_round.rs  box_oriented_round.rs  mod.rs  polygon_small.rs  polygon_small_round.rs  ramp.rs  ramp_boxy.rs  ramp_boxy_round.rs  ramp_round.rs  shape_combined.rs  shape_common.rs  shape_debug.rs  shape_moving.rs  shape_static.rs  util.rs
